--- a/PlotCabinTemps.ipynb
+++ b/PlotCabinTemps.ipynb
@@ -800,8 +800,8 @@
     "    df= pd.read_csv(url, header = None, sep = '\\t' ,names = cols)\n",
     "    df = df.pivot(index = 'time', columns='sensor', values='obs')\n",
     "    df = df.set_index(pd.to_datetime(df.index,format = '%d.%Y.%m %H:%M:%S'))\n",
-    "    df.rename(columns ={'4': 'Main Cabin','5': 'Engine Compartment',\n",
-    "                        '8':'Forward Water Tank'},inplace=True) \n",
+    "    df.rename(columns ={4: 'Main Cabin',5: 'Engine Compartment',\n",
+    "                        8:'Forward Water Tank'},inplace=True) \n",
     "    return df\n",
     "\n",
     "#Plot Data\n",
